# pyrachy

./: example.py  pyproject.toml
.github/workflows/: publish-to-pypi.yml  release-please.yml
src/: pyrachy.py
src/loaders/: argv_loader.py  base_loader.py
src/pyrachy/: __init__.py  pyrachy.py
src/pyrachy/loaders/: __init__.py  dict_loader.py  env_loader.py  file_loader.py
tests/: test_config.py
